--- a/src/resources/css/themes/Volcano/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano/NinjamWindow.css
@@ -193,4 +193,13 @@ IntervalProgressWindow
     background-color: rgb(176, 128, 94);
 }
 
+IntervalProgressDisplay
+{
+    qproperty-currentBeatColor: rgb(250, 73, 14);
+    qproperty-accentsColor: rgb(200, 0, 0); /* dark red */
+    qproperty-currentAccentColor: red;
+    qproperty-secondaryBeatsColor: rgba(106, 77, 57);
+    qproperty-disabledBeatsColor: rgba(86, 67, 47);
+    qproperty-linesColor: rgba(0, 0, 0, 50);
+}
 
