BLACK theme Chat message selection color match

--- a/src/resources/css/themes/Black/Chat.css
+++ b/src/resources/css/themes/Black/Chat.css
@@ -44,4 +44,8 @@ ChatMessagePanel #blockButton:hover
     font-weight: bold;
 }
 
-
+ChatMessagePanel #labelMessage
+{
+    selection-background-color: rgb(50, 50, 50);
+    selection-color: rgb(140, 140, 140)
+}
