Fixing ninjam window button colors and icons
- Using transparent icons to blend with any background color
- Improving buttons icons
- Fixing colors in ninjam window buttons

--- a/src/Common/gui/NinjamRoomWindow.ui
+++ b/src/Common/gui/NinjamRoomWindow.ui
@@ -76,7 +76,7 @@
      <item>
       <widget class="QPushButton" name="licenceButton">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+        <sizepolicy hsizetype="Maximum" vsizetype="MinimumExpanding">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
