--- a/src/resources/css/themes/Black/BaseTrack.css
+++ b/src/resources/css/themes/Black/BaseTrack.css
@@ -94,7 +94,7 @@ BaseTrackView[unlighted="true"] #buttonBoostZero,
 BaseTrackView[unlighted="true"] #buttonBoostPlus12,
 BaseTrackView[unlighted="true"] #soloButton,
 BaseTrackView[unlighted="true"] #muteButton,
-BaseTrackView[unlighted="true"] #buttonStereoInversion
+BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion
 {
     background-color: rgba(0, 0, 0, 30);
     border: none;
@@ -144,7 +144,7 @@ BaseTrackView[unlighted="true"] #buttonStereoInversion
     color: rgb(80, 80, 80);
 }
 
-BaseTrackView[unlighted="true"] #buttonStereoInversion:hover, #buttonStereoInversion:hover:checked
+BaseTrackView[unlighted="true"] #buttonStereoInversion:hover:checked
 {
     background-color: rgba(0, 0, 0, 80);
 }
