FXpanel FX color too dim fix

--- a/src/resources/css/themes/Volcano/LocalTrack.css
+++ b/src/resources/css/themes/Volcano/LocalTrack.css
@@ -32,7 +32,7 @@ FxPanelItem  QLabel                                     /* plugin name label */
 {
     qproperty-alignment: AlignLeft;
     font-size: 10px;
-    color: #D3D3D3;
+    color: white;
     margin: 0px;
 }
 
