BLACK th. ninjamer disabled tack hover check fix

--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -49,13 +49,16 @@ NinjamTrackView[horizontal="true"] #buttonBoostZero
     min-width: 12px;
 }
 
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoostMinus12:checked,
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoostPlus12:checked,
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoostZero:checked
+NinjamTrackView[horizontal="true"] QPushButton#buttonBoostMinus12:hover:checked,
+NinjamTrackView[horizontal="true"] QPushButton#buttonBoostPlus12:hover:checked,
+NinjamTrackView[horizontal="true"] QPushButton#buttonBoostZero:hover:checked,
+NinjamTrackView[horizontal="true"] QPushButton#lowCutButton:hover:checked,
+NinjamTrackView QPushButton#lowCutButton:hover:checked
 {
     margin-top: -1px;
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(100, 100, 100), stop:1 rgb(80, 80, 80));
     color: rgba(0, 0, 0, 160);
+    border: none;
 }
 
 NinjamTrackView[horizontal="true"]
