--- a/src/resources/css/themes/Rounded/BaseTrack.css
+++ b/src/resources/css/themes/Rounded/BaseTrack.css
@@ -70,7 +70,8 @@
 
 #buttonBoostMinus12:checked,
 #buttonBoostPlus12:checked,
-#buttonBoostZero:checked
+#buttonBoostZero:checked,
+#lowCutButton:checked
 {
     background-color: qlineargradient(x1:0, y1:1, x2:0, y2:0,
         stop:0 rgba(255, 255, 255, 160),
