VOLCANO th. unselected Tab color change to brown
this matches the preferences tab color for unselected tab

--- a/src/resources/css/themes/Volcano/General.css
+++ b/src/resources/css/themes/Volcano/General.css
@@ -232,7 +232,7 @@ QSlider::handle:vertical
 /* TabBar ----------------------*/
 QTabBar::tab
 {
-    background-color: rgba(0, 0, 0, 20); /* rgb(200, 200, 200);*/
+    background-color: rgba(174, 83, 27, 180);
     color: lightgray;
 }
 
