--- a/src/resources/css/themes/Volcano/BaseTrack.css
+++ b/src/resources/css/themes/Volcano/BaseTrack.css
@@ -134,7 +134,8 @@ BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion
     border-color: rgb(45, 45, 45);
 }
 
-BaseTrackView[unlighted="true"] #buttonStereoInversion:hover:checked
+BaseTrackView[unlighted="true"] #buttonStereoInversion:hover:checked,
+BaseTrackView[unlighted="true"] #buttonBoostZero:hover:checked
 {
     background-color: rgba(0, 0, 0, 50);
 }
