BLACK theme bright color st inv hover chk

--- a/src/resources/css/themes/Black/BaseTrack.css
+++ b/src/resources/css/themes/Black/BaseTrack.css
@@ -146,7 +146,7 @@ BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion
 
 BaseTrackView[unlighted="true"] #buttonStereoInversion:hover:checked
 {
-    background-color: rgba(0, 0, 0, 80);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(120, 120, 120), stop:1 rgb(80, 80, 80));
 }
 
 /* Small Label used to show max peak below peak meters
