--- a/src/resources/css/themes/Volcano/PublicRooms.css
+++ b/src/resources/css/themes/Volcano/PublicRooms.css
@@ -23,7 +23,9 @@ JamRoomViewPanel[empty="true"] #labelName
     color: black;
 }
 
-JamRoomViewPanel #content                   /* where the user names and wave form are showed */
+/* where the user names and wave form are showed */
+JamRoomViewPanel #content,
+JamRoomViewPanel[empty="true"] #content
 {
     background: rgba(0, 0, 0, 10);
     border-top: 1px solid rgba(0, 0, 0, 15);
