--- a/src/resources/css/themes/Flat/BaseTrack.css
+++ b/src/resources/css/themes/Flat/BaseTrack.css
@@ -42,6 +42,15 @@
     border-radius: 0px;
 }
 
+#buttonBoostMinus12:hover:checked,
+#buttonBoostPlus12:hover:checked,
+#buttonBoostZero:hover:checked
+{
+    background-color: rgb(200, 200, 200);
+    color: rgba(0, 0, 0, 160);
+    border-radius: 0px;
+}
+
 /* button colors when the track is NOT xmiting */
 BaseTrackView[unlighted="true"] #buttonBoostMinus12,
 BaseTrackView[unlighted="true"] #buttonBoostZero,
@@ -52,6 +61,11 @@ BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion
 {
     background-color: rgba(0, 0, 0, 30);
     border: none;
+}
+
+BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion:hover:checked
+{
+    background-color: rgb(200, 200, 200);
 }
 
 #buttonBoostZero:checked
