FLAT theme gain/stinv buttons hover check track not xmit fix (#555)
* FLAT th. gain/stinv bttns hover check not xmit

* FLAT th. St inv checked color match

* fix

--- a/src/resources/css/themes/Flat/BaseTrack.css
+++ b/src/resources/css/themes/Flat/BaseTrack.css
@@ -35,7 +35,17 @@
 
 #buttonBoostMinus12:checked,
 #buttonBoostPlus12:checked,
-#buttonBoostZero:checked
+#buttonBoostZero:checked,
+QPushButton#buttonStereoInversion:checked
+{
+    background-color: rgb(200, 200, 200);
+    color: rgba(0, 0, 0, 160);
+    border-radius: 0px;
+}
+
+#buttonBoostMinus12:hover:checked,
+#buttonBoostPlus12:hover:checked,
+#buttonBoostZero:hover:checked
 {
     background-color: rgb(200, 200, 200);
     color: rgba(0, 0, 0, 160);
@@ -52,6 +62,11 @@ BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion
 {
     background-color: rgba(0, 0, 0, 30);
     border: none;
+}
+
+BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion:hover:checked
+{
+    background-color: rgb(200, 200, 200);
 }
 
 #buttonBoostZero:checked
