--- a/src/resources/css/themes/Rounded/BaseTrack.css
+++ b/src/resources/css/themes/Rounded/BaseTrack.css
@@ -183,13 +183,19 @@ BaseTrackView[unlighted="true"] .QPushButton
    background-color: rgb(100, 100, 100);
 }
 
-BaseTrackView[unlighted="true"] #buttonStereoInversion:checked
+BaseTrackView[unlighted="true"] #buttonStereoInversion:checked,
+BaseTrackView[unlighted="true"] #buttonStereoInversion:hover:checked
 {
 background-color: qlineargradient(x1:0, y1:1, x2:0, y2:0,
     stop:0 rgba(255, 255, 255, 160),
     stop:0.2 rgba(255, 255, 255, 120),
     stop:0.7 rgba(255, 255, 255, 120),
     stop:1 rgba(255,255, 255, 30));
+}
+
+BaseTrackView[unlighted="true"] #buttonStereoInversion:hover
+{
+    background-color: rgba(0, 0, 0, 30);
 }
 
 /* track group
