--- a/src/resources/css/themes/Rounded/General.css
+++ b/src/resources/css/themes/Rounded/General.css
@@ -296,7 +296,7 @@ QMenuBar::item
     background:rgb(225, 225, 225);
 }
 
-QMenuBar::item:selected { /* hover effect for menu bar items */
+QMenuBar::item::enabled:selected { /* hover effect for menu bar items */
 
     border-radius: 2px;
 }
