--- a/src/Common/gui/PluginScanDialog.ui
+++ b/src/Common/gui/PluginScanDialog.ui
@@ -32,7 +32,7 @@
    <item>
     <widget class="QLabel" name="labelPluginText">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+      <sizepolicy hsizetype="Ignored" vsizetype="Maximum">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
