--- a/src/resources/css/themes/Volcano/Chords.css
+++ b/src/resources/css/themes/Volcano/Chords.css
@@ -5,6 +5,8 @@ ChordLabel
 {
     background-color: rgba(0,0,0, 7);
     color: rgb(90, 90, 90);
+    selection-background-color: rgb(179, 89, 37);
+    selection-color: rgb(254, 181, 102);
 }
 
 ChordLabel[current="true"]
