--- a/src/resources/css/themes/Black/Chords.css
+++ b/src/resources/css/themes/Black/Chords.css
@@ -5,6 +5,8 @@ ChordLabel
 {
     background-color: rgba(0,0,0, 7);
     color: rgb(90, 90, 90);
+    selection-background-color: rgb(120, 120, 120);
+    selection-color: rgb(40, 40, 40);
 }
 
 ChordLabel[current="true"]
@@ -12,4 +14,6 @@ ChordLabel[current="true"]
     background-color: rgb(140, 140, 140);
     border-color: gray;
     color: black;
+    selection-background-color: rgb(50, 50, 50);
+    selection-color: rgb(140, 140, 140);
 }
