--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -11,48 +11,48 @@
         <file alias="PublicRooms.css">css/common/PublicRooms.css</file>
     </qresource>
     <qresource prefix="/style/themes/Flat">
-        <file alias="BaseTrack.css">css/themes/Flat/BaseTrack.css</file>
-        <file alias="NinjamWindow.css">css/themes/Flat/NinjamWindow.css</file>
-        <file alias="LocalTrack.css">css/themes/Flat/LocalTrack.css</file>
-        <file alias="Dialogs.css">css/themes/Flat/Dialogs.css</file>
-        <file alias="General.css">css/themes/Flat/General.css</file>
-        <file alias="MainWindow.css">css/themes/Flat/MainWindow.css</file>
-        <file alias="PublicRooms.css">css/themes/Flat/PublicRooms.css</file>
-        <file alias="Chat.css">css/themes/Flat/Chat.css</file>
-        <file alias="Chords.css">css/themes/Flat/Chords.css</file>
+        <file>css/themes/Flat/BaseTrack.css</file>
+        <file>css/themes/Flat/NinjamWindow.css</file>
+        <file>css/themes/Flat/LocalTrack.css</file>
+        <file>css/themes/Flat/Dialogs.css</file>
+        <file>css/themes/Flat/General.css</file>
+        <file>css/themes/Flat/MainWindow.css</file>
+        <file>css/themes/Flat/PublicRooms.css</file>
+        <file>css/themes/Flat/Chat.css</file>
+        <file>css/themes/Flat/Chords.css</file>
     </qresource>
-    <qresource prefix="/style/themes/Volcano">
-        <file alias="BaseTrack.css">css/themes/Volcano/BaseTrack.css</file>
-        <file alias="NinjamWindow.css">css/themes/Volcano/NinjamWindow.css</file>
-        <file alias="LocalTrack.css">css/themes/Volcano/LocalTrack.css</file>
-        <file alias="Dialogs.css">css/themes/Volcano/Dialogs.css</file>
-        <file alias="General.css">css/themes/Volcano/General.css</file>
-        <file alias="MainWindow.css">css/themes/Volcano/MainWindow.css</file>
-        <file alias="PublicRooms.css">css/themes/Volcano/PublicRooms.css</file>
-        <file alias="Chat.css">css/themes/Volcano/Chat.css</file>
-        <file alias="Chords.css">css/themes/Volcano/Chords.css</file>
+    <qresource prefix="/style/themes/Volcano_nm">
+        <file>css/themes/Volcano_nm/BaseTrack.css</file>
+        <file>css/themes/Volcano_nm/NinjamWindow.css</file>
+        <file>css/themes/Volcano_nm/LocalTrack.css</file>
+        <file>css/themes/Volcano_nm/Dialogs.css</file>
+        <file>css/themes/Volcano_nm/General.css</file>
+        <file>css/themes/Volcano_nm/MainWindow.css</file>
+        <file>css/themes/Volcano_nm/PublicRooms.css</file>
+        <file>css/themes/Volcano_nm/Chat.css</file>
+        <file>css/themes/Volcano_nm/Chords.css</file>
     </qresource>
-    <qresource prefix="/style/themes/Black">
-        <file alias="BaseTrack.css">css/themes/Black/BaseTrack.css</file>
-        <file alias="NinjamWindow.css">css/themes/Black/NinjamWindow.css</file>
-        <file alias="LocalTrack.css">css/themes/Black/LocalTrack.css</file>
-        <file alias="Dialogs.css">css/themes/Black/Dialogs.css</file>
-        <file alias="General.css">css/themes/Black/General.css</file>
-        <file alias="MainWindow.css">css/themes/Black/MainWindow.css</file>
-        <file alias="PublicRooms.css">css/themes/Black/PublicRooms.css</file>
-        <file alias="Chat.css">css/themes/Black/Chat.css</file>
-        <file alias="Chords.css">css/themes/Black/Chords.css</file>
+    <qresource prefix="/style/themes/Black_nm">
+        <file>css/themes/Black_nm/BaseTrack.css</file>
+        <file>css/themes/Black_nm/NinjamWindow.css</file>
+        <file>css/themes/Black_nm/LocalTrack.css</file>
+        <file>css/themes/Black_nm/Dialogs.css</file>
+        <file>css/themes/Black_nm/General.css</file>
+        <file>css/themes/Black_nm/MainWindow.css</file>
+        <file>css/themes/Black_nm/PublicRooms.css</file>
+        <file>css/themes/Black_nm/Chat.css</file>
+        <file>css/themes/Black_nm/Chords.css</file>
     </qresource>
     <qresource prefix="/style/themes/Rounded">
-        <file alias="BaseTrack.css">css/themes/Rounded/BaseTrack.css</file>
-        <file alias="Chat.css">css/themes/Rounded/Chat.css</file>
-        <file alias="Chords.css">css/themes/Rounded/Chords.css</file>
-        <file alias="Dialogs.css">css/themes/Rounded/Dialogs.css</file>
-        <file alias="General.css">css/themes/Rounded/General.css</file>
-        <file alias="LocalTrack.css">css/themes/Rounded/LocalTrack.css</file>
-        <file alias="MainWindow.css">css/themes/Rounded/MainWindow.css</file>
-        <file alias="NinjamWindow.css">css/themes/Rounded/NinjamWindow.css</file>
-        <file alias="PublicRooms.css">css/themes/Rounded/PublicRooms.css</file>
+        <file>css/themes/Rounded/BaseTrack.css</file>
+        <file>css/themes/Rounded/Chat.css</file>
+        <file>css/themes/Rounded/Chords.css</file>
+        <file>css/themes/Rounded/Dialogs.css</file>
+        <file>css/themes/Rounded/General.css</file>
+        <file>css/themes/Rounded/LocalTrack.css</file>
+        <file>css/themes/Rounded/MainWindow.css</file>
+        <file>css/themes/Rounded/NinjamWindow.css</file>
+        <file>css/themes/Rounded/PublicRooms.css</file>
     </qresource>
     <qresource prefix="/tr">
         <file alias="en.qm">../../translations/en.qm</file>
