Adding 2 types of low cut [normal and drastic] in ninjam tracks close #593
 - Adding multistatebutton widget to represent 3 low cut states [off, normal and drastic]
 - Using 2 low cut frequencies (120 and 220 Hz)
 - Storing and loading the low cut state for each ninjam track
 - Using different icons for each low cut state

--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -192,16 +192,35 @@ NinjamTrackView #lowCutButton
 {
     max-width: 8px;
     max-height: 8px;
-    background-image: url(':/images/low_cut.png');
     background-position: center center;
     background-repeat: none;
     border-style: inset;
+}
+
+NinjamTrackView #lowCutButton[state="0"]
+{
+   background-image: url(':/images/low_cut_off.png');
+}
+
+NinjamTrackView #lowCutButton[state="1"]
+{
+   background-image: url(':/images/low_cut_normal.png');
+}
+
+NinjamTrackView #lowCutButton[state="2"]
+{
+   background-image: url(':/images/low_cut_drastic.png');
 }
 
 NinjamTrackView #lowCutButton::hover
 {
     border-style: solid;
     border-color: rgb(80, 80, 80);
+}
+
+NinjamTrackView[horizontal="false"] #lowCutButton
+{
+    min-height: 8px;
 }
 
 NinjamTrackView[horizontal="true"] #lowCutButton
