--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -107,7 +107,9 @@
         <file>pencil.png</file>
         <file>pencil-read-only.png</file>
         <file>chat_blocked.png</file>
-        <file>low_cut.png</file>
+        <file>low_cut_off.png</file>
+        <file>low_cut_normal.png</file>
+        <file>low_cut_drastic.png</file>
     </qresource>
     <qresource prefix="/flags">
         <file>flags/ad.png</file>
