--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -38,7 +38,7 @@ NinjamTrackView QPushButton#lowCutButton:hover:checked
 {
     margin-top: -1px;
     background-color: rgb(200, 200, 200);
-    border: none;
+    border-color: transparent;
 }
 
 NinjamTrackView[horizontal="true"]
