Fixing horizontal scrolling when chat text is long and have no spaces fix #607
- Fixing chat manual test
- Using QTextBrowser and the option wrapAnywhere to wrap very long words and avoid horizontal scroll.

--- a/src/Common/gui/chat/ChatPanel.ui
+++ b/src/Common/gui/chat/ChatPanel.ui
@@ -44,7 +44,7 @@
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
      <property name="horizontalScrollBarPolicy">
-      <enum>Qt::ScrollBarAsNeeded</enum>
+      <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
      <property name="widgetResizable">
       <bool>true</bool>
@@ -55,14 +55,14 @@
         <x>0</x>
         <y>0</y>
         <width>235</width>
-        <height>329</height>
+        <height>16</height>
        </rect>
       </property>
-      <property name="minimumSize">
-       <size>
-        <width>0</width>
-        <height>100</height>
-       </size>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
      </widget>
     </widget>
