--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -34,7 +34,9 @@ NinjamTrackView[horizontal="true"] QPushButton#buttonBoostMinus12:hover:checked,
 NinjamTrackView[horizontal="true"] QPushButton#buttonBoostPlus12:hover:checked,
 NinjamTrackView[horizontal="true"] QPushButton#buttonBoostZero:hover:checked,
 NinjamTrackView[horizontal="true"] QPushButton#lowCutButton:hover:checked,
-NinjamTrackView QPushButton#lowCutButton:hover:checked
+NinjamTrackView[horizontal="true"] QPushButton#receiveButton:hover:checked,
+NinjamTrackView QPushButton#lowCutButton:hover:checked,
+NinjamTrackView QPushButton#receiveButton:hover:checked
 
 {
     margin-top: -1px;
@@ -109,19 +111,22 @@ NinjamTrackView[unlighted="true"]{           /* user is not xmiting */
     background: rgb(193, 106, 48,);
 }
 
-NinjamTrackView #lowCutButton:!checked
+NinjamTrackView #lowCutButton:!checked,
+NinjamTrackView #receiveButton:!checked
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop: 0.0 #FDE5A9,
         stop: 1.0 #FFB301);
 }
 
-NinjamTrackView #lowCutButton:checked
+NinjamTrackView #lowCutButton:checked,
+NinjamTrackView #receiveButton:checked
 {
     background-color: #B35925;
 }
 
-NinjamTrackView[unlighted="true"] #lowCutButton
+NinjamTrackView[unlighted="true"] #lowCutButton,
+NinjamTrackView[unlighted="true"] #receiveButton
 {
     background-color: rgba(0, 0, 0, 30);
     border: none;
