red receive button when unchecked manually
Visual feedback when manually "not receiving" tracks in case the user changes its mind and wants to receive again. When remote user is not transmitting, then the button has normal theme color.

--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -237,10 +237,14 @@ NinjamTrackView[horizontal="true"] #receiveButton
     max-height: 6px;
 }
 
-NinjamTrackView QPushButton#lowCutButton:!checked,
-NinjamTrackView QPushButton#receiveButton:!checked
+NinjamTrackView QPushButton#lowCutButton:!checked
 {
     border-style: outset;
+}
+
+NinjamTrackView QPushButton#receiveButton:!checked
+{
+    background-color:red;
 }
 
 NinjamTrackView QPushButton#receiveButton
