--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -98,8 +98,7 @@ NinjamRoomWindow QToolButton:hover:checked,
     background-color: rgba(255, 255, 255, 100);
 }
 
-NinjamRoomWindow QToolButton:hover:!checked,
-#licenceButton:hover:!checked
+NinjamRoomWindow QToolButton:hover:!checked
 {
     background-color: rgba(255, 255, 255, 40);
 }
