receive red button working in horizontal layout

--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -23,6 +23,11 @@ NinjamTrackView[unlighted="true"][horizontal="true"] #receiveButton:checked
     border: none;
 }
 
+NinjamTrackView[unlighted="true"][horizontal="true"] #receiveButton:!checked
+{
+    background-color:red;
+}
+
 NinjamTrackView[horizontal="true"] #panSlider
 {
     max-width: 50px;
