--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -225,12 +225,14 @@ NinjamTrackView #lowCutButton::hover
     border-color: rgb(80, 80, 80);
 }
 
-NinjamTrackView[horizontal="false"] #lowCutButton
+NinjamTrackView[horizontal="false"] #lowCutButton,
+NinjamTrackView[horizontal="false"] #receiveButton
 {
     min-height: 8px;
 }
 
-NinjamTrackView[horizontal="true"] #lowCutButton
+NinjamTrackView[horizontal="true"] #lowCutButton,
+NinjamTrackView[horizontal="true"] #receiveButton
 {
     max-height: 6px;
 }
@@ -238,6 +240,11 @@ NinjamTrackView[horizontal="true"] #lowCutButton
 NinjamTrackView QPushButton#lowCutButton:!checked
 {
     border-style: outset;
+}
+
+NinjamTrackView QPushButton#receiveButton:!checked
+{
+    background-color:red;
 }
 
 NinjamTrackView QPushButton#receiveButton
