--- a/src/resources/css/themes/Rounded/NinjamWindow.css
+++ b/src/resources/css/themes/Rounded/NinjamWindow.css
@@ -1,6 +1,7 @@
 /* some details of ninjam tracks */
 
-NinjamTrackView #lowCutButton:checked
+NinjamTrackView #lowCutButton:checked,
+NinjamTrackView #receiveButton:checked
 {
     background-color: rgb(175, 175, 175);
 }
@@ -56,6 +57,12 @@ NinjamTrackView[horizontal="true"][unlighted="true"]
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop:0 rgb(150, 150, 150),
         stop:1 rgb(90, 90, 90));
+}
+
+NinjamTrackView[unlighted="true"] #lowCutButton:!checked
+{
+border: none;
+background-color: rgb(100, 100, 100);
 }
 
 /* buttons in ninjam track when using horizontal layout
